# command-kosh

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  rust-ci.yml
docs/: index.html  main.js  style.css
scripts/: release.js
src/: App.css  App.tsx  main.tsx  routeTree.gen.ts
src-tauri/: .gitignore  Cargo.toml  error.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli_setup.rs  commands.rs  integrity.rs  lib.rs  main.rs  models.rs  scheduler.rs  store.rs
src-tauri/tests/: integrity.rs  models.rs
src/components/: CommandDetails.tsx  CommandForm.tsx  CommandList.tsx
src/custom-components/: CopyableCommand.tsx
src/pages/command-details/: CommandDetailsPage.tsx
src/pages/command-details/components/: CommandEditForm.tsx  CommandLogs.tsx  DeleteCommandModal.tsx
src/pages/command-list/: CommandListPage.tsx
src/pages/command-list/components/: AutostartBanner.tsx  CommandForm.tsx  CommandList.tsx  QuitModal.tsx  UpdaterBanner.tsx
src/pages/tampering-review/: TamperingReviewPage.tsx
src/pages/tampering-review/components/: TamperedCommandCard.tsx  TamperedHeader.tsx
src/routes/: __root.tsx  command-details.$commandId.tsx  index.tsx  tampering-review.tsx
src/types/: index.ts
src/utils/: time.ts
