[package]
name = "command-kosh"
version = "0.1.0"
description = "Command Kosh App"
authors = ["Ayaan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "command_kosh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.49.0", features = ["rt", "time", "macros", "sync", "process"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-single-instance = "2.4.0"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"

